k8s/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-project
  labels:
    app: test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-project
  template:
    metadata:
      labels:
        app: test-project
    spec:
      containers:
      - name: test-project
        image: test-project # this is dynamically replaced by kustomize
        imagePullPolicy: Always
        securityContext:
          privileged: false
        ports:
          - name: http
            containerPort: 80
