k8s/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-project
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: test-project
