k8s/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
