k8s/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
  - name: http
    port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq
