k8s/app-ingress.yaml
# make sure to enable ingress locally - `minikube addons enable ingress`
# then run `minikube tunnel`
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-project
                port:
                  number: 80
